--- a/tile-element.html
+++ b/tile-element.html
@@ -176,15 +176,15 @@ font-size: 20px;
         <div class="placeholder_text">[group [[group_num]]]</div> 
     </div>
     <div class="canvas_part_1">
-        <managed-canvas canv_id="[[group_model.waves]]"></managed-canvas>
-        <managed-canvas canv_id="[[group_model.rm_spa]]" fix_height="[[spa_rm_height]]"></managed-canvas>
+        <managed-canvas ckey="[[group_model.waves]]"></managed-canvas>
+        <managed-canvas ckey="[[group_model.rm_spa]]" fix_height="[[spa_rm_height]]"></managed-canvas>
     </div>
     <div class="canvas_part_2">
         <div>
-            <managed-canvas canv_id="[[group_model.rm_dir]]"></managed-canvas>
-            <managed-canvas canv_id="[[group_model.rm_speed]]"></managed-canvas>
+            <managed-canvas ckey="[[group_model.rm_dir]]"></managed-canvas>
+            <managed-canvas ckey="[[group_model.rm_speed]]"></managed-canvas>
         </div>
-        <managed-canvas canv_id="[[group_model.tac]]"></managed-canvas>
+        <managed-canvas ckey="[[group_model.tac]]"></managed-canvas>
     </div>
     <div id='sticker' class='sticker' style$="[[_sticker_style(group_num)]]">[[group_num]]</div>
     <div id='over' class='over' style="display:none;">
