--- a/utils.html
+++ b/utils.html
@@ -227,19 +227,10 @@ Utils.file_manager = (function(){
 
 
 Utils.canvas_manager = (function(){
-    // This is a little bit more than a thin wrapper around a Map
-
-    var store = new Map(); // store of canvas els
-    var last_ckey = 0;
-    var suffix = " (canvas-manager)"; // can drop suffix using parseInt
-    var validate_id = function(id){
-        if((id + "").indexOf(suffix) === -1)
-            throw "canvas-manager was passed invalid id";
-        return true;
-    }
-
+    
+    
    return {
-        store_from_buffer: function(buffer, dims){
+        buffer_to_ckey: function(buffer, dims){
             var el = document.createElement("canvas");
             el.width = dims[0];
             el.height = dims[1];
@@ -248,23 +239,20 @@ Utils.canvas_manager = (function(){
             var im_data = ctx.createImageData(dims[0], dims[1]);
             im_data.data.set(new Uint8ClampedArray(buffer));
             ctx.putImageData(im_data, 0, 0);
-            store.set(++last_ckey, el);
-            return last_ckey + suffix;
+            return {canvas: el};
         },
-        store_from_dims: function(dims){
+        dims_to_ckey: function(dims){
             var el = document.createElement("canvas");
             el.width = dims[0];
             el.height = dims[1];
-            store.set(++last_ckey, el);
-            return last_ckey + suffix;
+            return {canvas: el};
         },
-        store_canvas: function(c){
-            store.set(++last_ckey, c);
-            return last_ckey + suffix;
+        to_ckey: function(c){
+            return {canvas: c};
         },
-        store_copy: function(id){
+        clone_ckey: function(ckey){
             // if we were really sensible this may never be needed...but we're not
-            let old_canv = id && validate_id(id) && store.get(parseInt(id));
+            let old_canv = ckey && ckey.canvas;
             if(!old_canv){
                 return;
             }
@@ -272,21 +260,13 @@ Utils.canvas_manager = (function(){
             new_canv.width = old_canv.width;
             new_canv.height = old_canv.height;
             new_canv.getContext('2d').drawImage(old_canv, 0, 0);
-            store.set(++last_ckey, new_canv);
-            return last_ckey + suffix;
+            return {canvas: new_canv};
         },
-        get_canvas: function(id){
-            return id && validate_id(id) && store.get(parseInt(id));
+        get_2d_ctx: function(ckey){
+            return ckey && ckey.canvas && ckey.canvas.getContext('2d');
         },
-        get_2d_ctx: function(id){
-            return validate_id(id) && store.get(parseInt(id)).getContext('2d');
-        },
-        free_canvas: function(id){
-            id && validate_id(id);
-            store.delete(parseInt(id));
-        },
-        update_from_buffer: function(id, buffer){
-            let el = validate_id(id) && store.get(parseInt(id));
+        update_from_buffer: function(ckey, buffer){
+            let el = ckey && ckey.canvas;
             let ctx = el.getContext('2d');
             var im_data = ctx.createImageData(el.width, el.height);
             im_data.data.set(new Uint8ClampedArray(buffer));
